--- a/index.html
+++ b/index.html
@@ -9,13 +9,9 @@
 </head>
 
 <body>
-    <div id="root">
-        <h1>Valu is here!</h1>
-    </div>
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-
-   <script src="./app.js"></script>
+    <div id="root"></div>
+    
+   <script type="module" src="./app.js"></script>
 </body>
 
 </html>
