--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="root"></div>
     
-   <script type="module" src="./app.js"></script>
+   <script type="module" src="./src/App.js"></script>
 </body>
 
 </html>
